# scapenet

./: .gitmodules  CMakeLists.txt  runescape.sh  screenshot.xwd  setup.sh
annotation/: Screenshot_2018-12-11_19-02-26.txt  classes.txt
examples/: features.cpp  health.cpp  mini-map.cpp  mouse.cpp  stitch-map.cpp
inc/: client.hpp  input-pipe.hpp  output-pipe.hpp  player.hpp
inc/control/: keyboard.hpp  mouse.hpp
inc/ui/: element.hpp  fixed-resolution.hpp  map-area.hpp  menu.hpp  mini-map.hpp
include/: client.hpp  input-pipe.hpp  output-pipe.hpp  pipe-stream.hpp  player.hpp
include/control/: keyboard.hpp  mouse.hpp
include/player/: player.hpp
include/ui/: element.hpp  fixed-resolution.hpp  menu.hpp  mini-map.hpp  ui.hpp
src/: client.cpp  keyboard.cpp  main.cpp  mouse.cpp  ocr.cpp  player.cpp
src/control/: keyboard.cpp  mouse.cpp
